Some string questions
Hi, found some more things when reviewing the Swedish translation of libgda:
- In libgda/gda-db-catalog.c are 3 strings containing "xmlDoc object can't be created from xmfile name".
Here it looks like "xmfile" should be "xmlfile".
- In libgda/gda-data-select.c: "Cannot add a row because the number of rows in unknown"
This looks like "in unknown" should be "is unknown"
- In 2 strings in libgda/sqlite/gda-sqlite-provider.c: "Parameter '%s' not found is statement"
This looks like "is statement" should be "in statement"
- In postgres/postgres_specs_create_view.xml.in: "Replace it already exists"
"it already exists" -> "if already exists"
- In 2 strings in providers/web/gda-web-util.c: "Could not parse server's reponse"
"reponse" -> "response"
- In tools/browser/ldap-browser/ldap-classes-page.c: "Add class Favorites"
Here we are wondering if this string should be the same as the corresponding string in tools/browser/ldap-browser/ldap-entries-page.c.
In that case this can be "Add class to Favorites"