DbModule: Fix memory leaks

Also fix https://gitlab.gnome.org/GNOME/libgda/issues/167